--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -15,7 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(assets/background.jpg);
+    background-image: url(assets/Web\ Home.jpg);
     background-size: cover;
     background-position: center;
 }
