--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -15,7 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(assets/background.jpg);
+    background-image: url(assets/background1.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -412,7 +412,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(assets/phone-background.jpg);
+        background-image: url(assets/phone-background1.jpg);
     }
     .header-text{
         margin-top: 100%;
