--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -412,7 +412,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(assets/phone-background1.jpg);
+        background-image: url(assets/phone-background.jpg);
     }
     .header-text{
         margin-top: 100%;
