--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -248,7 +248,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0%;   /*100% for the non hover effect*/
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #f5b520);
     border-radius: 10px;
     position: absolute;
     left: 0;
